--- a/theme/urlcool/index.html
+++ b/theme/urlcool/index.html
@@ -158,10 +158,10 @@
         display: block;
         position: absolute;
         margin-left: 70px;
-        padding-top: 3px;
+        padding-top: 2px;
         top: 280px;
         font-family: Montserrat,sans-serif;
-        font-size: .9em;
+        font-size: 1em;
         color: #ffffff;
         cursor: pointer;
 
@@ -173,7 +173,7 @@
     .customise-container {
         display: block;
         position: absolute;
-        margin-left: 185px;
+        margin-left: 195px;
         top: 280px;
         font-family: Montserrat,sans-serif;
         color: #ffffff;
@@ -235,14 +235,14 @@
       </div>
       <div class="customise-container" id="customise-link" style="display: none;">
         <span>/</span>
-        <input type="text" id="customkey" placeholder="自定义后缀">
+        <input type="text" id="customkey" placeholder="Your Custom Url">
       </div>
       <!-- <div class="card-text">
         Powered by <a href="https://github.com/xyTom/Url-Shorten-Worker/" target="_self">xyTom</a>
       </div> -->
       <div class="card-text">
         <span style="padding-right: 24px;">&copy; 2021 Animo</span>
-        <a style="padding-right: 24px;" href="https://github.com/Zwysun" target="_blank">Github</a>
+        <a style="padding-right: 24px;" rel="noopener" href="https://github.com/Zwysun" target="_blank">Github</a>
         <a href="mailto:hello@animo.top">Mail</a>
       </div>
       <p id="notice"></p>             
@@ -277,7 +277,7 @@
       }
     }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.0/dist/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/gh/Zwysun/Url-Shorten-Worker@gh-pages/main.min.js" crossorigin="anonymous"></script>
